grammar.js
    source_file: $ => repeat(
      choice(
        $.statement,
        $.comment
      )
    ),

    statement: $ => prec(30,
      seq(
        $.statement_without_semicolon,
        ';'
      )
    ),

    statement_without_semicolon: $ =>
      prec(25,
        choice(
          prec(20, $.loop_statement),
          prec(20, $.if_statement),
          prec(20, $.for_statement),
          prec(20, $.while_statement),
          prec(20, $.repeat_statement),

          prec(11, $.variable_table_declaration),
          prec(10, $.set_declaration),
          prec(10, $.table_declaration),
          prec(9, $.parameter_declaration),
          prec(9, $.scalar_declaration),
          prec(9, $.variable_declaration),
          prec(9, $.equation_declaration),
          prec(9, $.model_declaration),
          prec(9, $.solve_statement),
          prec(9, $.display_statement),
          prec(9, $.option_statement),
          prec(9, $.acronym_declaration),

          $.alias_declaration,
          $.break_statement,
          $.continue_statement,
          $.abort_statement,
          prec(2, $.equation_definition),
          prec(1, $.assignment_statement)
        )
    ),

    // utils
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    set_element: $ => /[a-zA-Z_][a-zA-Z0-9_\-]*/,
    set_element_selection: $ => choice(
      $.set_element,
      seq(
        token("("), commaSep1($.set_element), token(")")
      ),
      seq($.set_element, "*", $.set_element),
      seq($.number, "*", $.number)
    ),

    identifier_with_domain: $ =>
      prec(3,
        seq(
          $.identifier,
          token.immediate('('),
          $.identifier_with_domain_args,
          ')'
        )
    ),

    identifier_with_domain_args: $ =>
      seq(
        choice($.identifier, '*'),
        optional(
          prec(3, repeat(seq(',', choice($.identifier, '*'))))
        )
      ),

    indexed_reference: $ => 
      prec(2,
        seq(
          $.identifier,
          optional(
            seq(
              token.immediate('.'),
              $.variable_attribute_keyword
            )
          ),
          token.immediate('('),
          $.indexed_reference_args,
          ')'
        )
      ),

    reference: $ => 
      prec(2,
        seq(
          $.identifier,
          token.immediate('.'),
          $.variable_attribute_keyword
        )
      ),

    indexed_reference_args: $ =>
      seq(
        $.index_element,
        optional(
          prec(2, repeat(
            seq(
            ',',
            $.index_element
          )
        )))
      ),
    
    index_element: $ =>
      choice(
          $.string,
          seq($.identifier, '*', $.identifier),
          seq($.identifier, '+', $.number),
          seq($.number, '*', $.number),
          $.identifier_with_domain,
          $.identifier,
          $.number
        ),

    variable_attribute_keyword: $ =>
      choice(
        token.immediate(caseInsensitive('up')),
        token.immediate(caseInsensitive('lo')),
        token.immediate(caseInsensitive('l')),
        token.immediate(caseInsensitive('fx')),
        token.immediate(caseInsensitive('scale')),
        token.immediate(caseInsensitive('m')),
        // equation attributes
        token.immediate(caseInsensitive('infeas')),
        token.immediate(caseInsensitive('range')),
        // set element attributes
        token.immediate(caseInsensitive('val')),   // numeric value of set element
        token.immediate(caseInsensitive('tl')),    // text label of set element
        token.immediate(caseInsensitive('te')),    // element text in legend
        token.immediate(caseInsensitive('ord')),   // ordinal value (alias for ord() in some contexts)
        // model solve result attributes (e.g. ml.modelstat)
        token.immediate(caseInsensitive('modelstat')),
        token.immediate(caseInsensitive('solvestat')),
        token.immediate(caseInsensitive('objval')),
        token.immediate(caseInsensitive('objest')),
        token.immediate(caseInsensitive('resusd')),
        token.immediate(caseInsensitive('iterusd')),
        token.immediate(caseInsensitive('nodusd')),
        token.immediate(caseInsensitive('numinfes')),
        token.immediate(caseInsensitive('prior')),
        // model solver control attributes (e.g. fkv.iterlim = 3000)
        token.immediate(caseInsensitive('iterlim')),
        token.immediate(caseInsensitive('reslim')),
        token.immediate(caseInsensitive('optfile')),
        token.immediate(caseInsensitive('optcr')),
        token.immediate(caseInsensitive('optca')),
        token.immediate(caseInsensitive('bratio')),
        token.immediate(caseInsensitive('trylinear')),
      ),
      
    number: $ => /[+-]?(?:\d+\.?\d*|\.\d+)([eE][+-]?\d+)?/,

    string: $ => choice(
      seq('"', repeat(/[^"]/), '"'),
      seq("'", repeat(/[^']/), "'")
    ),

    // set declaration

    index_atom: $ => seq(
      $.set_element_selection,
      repeat(seq('.', $.set_element_selection))
    ),

    equation_keyword: $ => prec(9, choice(
      token.immediate(caseInsensitive('equation')),
      token.immediate(caseInsensitive('equations'))
    )),

    equation_declaration: $ => seq(
      $.equation_keyword,
      commaOrNewlineSep1($.eq_entry)
    ),

    eq_entry: $ => seq(
      choice(
        $.identifier,                      // eq_name
        $.identifier_with_domain
      ),
      optional($.string),                // ["text"]
      optional($.eq_data_block)         // [/ ... /]
    ),

    eq_data_block: $ => seq(
      '/',
      commaOrNewlineSep1($.eq_attr_assignment),
      '/'
    ),

    // j1.up 10    i1.j2.lo 5     k.m 0    a.scale 20
    eq_attr_assignment: $ => seq(
      $.index_atom,
      token.immediate('.'),        // no space between element and dot attribute
      $.variable_attribute_keyword,
      field('value', $.number)
    ),

    // tables
    

    // models declaration

    display_keyword: $ => token.immediate(caseInsensitive('display')),

    display_statement: $ => prec(9, seq($.display_keyword, commaSep1($.display_item))),

    display_item: $ => choice( $.string, $.expression),

    // Expressions

    expression: $ => 
      prec(3,
        choice(
          prec.left(5, $.unary_builtin_function_expr),
          prec.left(4, $.binary_builtin_function_expr),
          prec.left(3, $.multi_args_builtin_function_expr),
          prec.left(2, $.number),
          prec.left(2, $.bool),
          prec.left(2, $.string),
          prec.left(2, $.unary_expr),
          prec.left(2, $.indexed_reference),
          prec.left(2, $.paren_expr),
          prec.left(2, $.binary_expr),
          prec.left(2, $.indexed_operation),
          prec.left(1, $.reference),
        // $.call_expr,
          $.conditional_expr,
          prec.left(-1, alias($.identifier, $.bare_identifier)),
      )),

    paren_expr: $ => seq('(', $.expression, ')'),

    unary_expr: $ => prec(100, seq(choice('+', '-', 'not'), $.expression)),

    binary_operator_keyword : $ => choice(
      token('+'), token('-'), token('*'), token('/'), token('**'),
      token('>'), token('<'), token('>='), token('<='), token('<>'),
      token('='),   // equality comparison in conditions (e.g. if / until)
      token(caseInsensitive('and')), token(caseInsensitive('or')),
      token(caseInsensitive('gt')), token(caseInsensitive('lt')),
      token(caseInsensitive('ge')), token(caseInsensitive('le')),
      token(caseInsensitive('ne')),
      token(caseInsensitive('eq')),
      token(caseInsensitive('mod'))
    ),

    binary_expr: $ => prec.left(1, seq(
      $.expression,
      $.binary_operator_keyword,
      $.expression
    )),

    indexed_operation_keyword: $ => choice(
      'sum', 'prod', 'smin', 
      'smax', 'sand', 'sor'
    ),

    indexed_operation: $ => seq(
      $.indexed_operation_keyword,
      token.immediate('('),
      $.index_list,
      optional(
        seq(
          '$',
          $.expression
        )
      ),
      token(','),
      $.expression,
      token(')')
    ),

    index_list: $ =>
      choice(
        $.index_element,
        seq(
          token('('),
          $.index_element,
          optional(
              seq(
                ',',
                $.index_element
              )
            ),
          token(')')
          )
        ),

    unary_builtin_function_keyword: $ =>
      prec(5,
        choice(
          'abs',
          'ord',
          'card',
          'val',
          'exp',
          'log',
          'log10',
          'sqrt',
          'sin',
          'cos',
          'tan',
          'asin',
          'acos',
          'arctan',
          'sinh',
          'cosh',
          'tanh',
          'ceil',
          'floor',
          'sign',
          'sqr',
          'trunc',
          'frac'
        )
    ),

    unary_builtin_function_expr: $ =>
      prec(5,
        seq(
          $.unary_builtin_function_keyword,
          '(',
          $.expression,
          ')'
        )
      ),


    multi_args_builtin_function_keyword: $ =>
      prec(3,
        choice(
          'max',
          'min',
          'round'
        )
      ),

    multi_args_builtin_function_expr: $ =>
      prec(3,
        seq(
          $.multi_args_builtin_function_keyword,
          '(',
          $.expression,
          optional(
            repeat(
              seq(
                ',',
                $.expression
              )
            )
          ),
          ')'
        )
      ),
    

    // Assignments

    assignment_statement: $ =>
      prec(1,
        seq(
          field(
            "left_hand_side",
            choice(
              $.indexed_reference,
              $.reference,
              $.identifier, // i
            )
          ),
          optional(
            field("condition",
              prec(2,
                seq(
                  '$',
                  $.expression
                )
              )
            )
          ),
          '=',
          field("right_hand_side",
            $.expression
          )
        )
      ),

    // Equation definitions  (eqn_name(domain)[$cond].. lhs =e= rhs)

    equation_type: $ =>
      token(choice(
        /=[eE]=/,   // equality
        /=[lL]=/,   // less-than-or-equal
        /=[gG]=/,   // greater-than-or-equal
        /=[nN]=/,   // non-binding  (free row)
        /=[xX]=/,   // external    (solver-defined)
        /=[cC]=/,   // conic
      )),

    equation_definition: $ =>
      prec(2,
        seq(
          field("name",
            choice(
              $.identifier_with_domain,
              $.identifier,
            )
          ),
          optional(
            field("condition",
              seq('$', $.expression)
            )
          ),
          '..',
          field("left_hand_side",  $.expression),
          field("type",            $.equation_type),
          field("right_hand_side", $.expression),
        )
      ),

    // loops
    loop_keyword: $ => token.immediate(caseInsensitive('loop')),

    loop_statement: $ => prec(20,
      seq(
        $.loop_keyword,
        token('('),
        $.index_list,
        optional(
          seq(
            '$',
            $.expression
          )
        ),
        token(','),
        repeat($.statement),
        optional(
          $.statement_without_semicolon,
        ),
        token(')')
      )
    ),

    // for loop: for(scalar = start to|downto end [by step], statements)
    if_statement: $ => prec(20,
      seq(
        field("if",
          seq(
            'if',
            '(',
            alias($.expression, $.condition), // logical condition
            ',',
            $.statement,
            repeat($.statement), // one or more statements
          )
        ),
        repeat(
          field("elseif",
            seq(
              'elseif',
              alias($.expression, $.condition),
              ',',
              $.statement,
              repeat($.statement)
            )
          ),
        ),
        optional(
          field("else",
            seq(
              'else',
              $.statement,
              repeat($.statement)
            )
          )
        ),
        ')'
      )
    )
  },
