test/corpus/control_flow.txt
================================================================================
control_flow
================================================================================

loop(i$(curacc > reltol),
       value(i+1) =  0.5*(value(i) + target / value(i));
       sqrtval    =  value(i);
       curacc     =  abs (value(i)-value(i))/(1+abs(value(i)))
);
loop( (i,j) $ (q(i,j) > 0), x = x + q(i,j));
loop ( i $ (c(i) + c(i)**2), z = z + 1);
loop ( i $ sum(j, abs(q(i,j))), z = z + 1);
loop ( j $ (ord(j) > 1 and ord(j) < card(j)), z = z + 1);
loop ( (i,j) $ k(i,j), y = y + ord(i) + 2*ord(j));
loop(i$(curacc > reltol),
       value(i+1) =  0.5*(value(i) + target/value(i));
       sqrtval    =  value(i+1);
       curacc     =  abs (value(i+1)-value(i))/(1+abs(value(i+1)))
) ;

--------------------------------------------------------------------------------

(source_file
  (statement
    (statement_without_semicolon
      (loop_statement
        (loop_keyword)
        (index_list
          (index_element
            (identifier)))
        (expression
          (paren_expr
            (expression
              (binary_expr
                (expression
                  (bare_identifier))
                (binary_operator_keyword)
                (expression
                  (bare_identifier))))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (indexed_reference
                (identifier)
                (indexed_reference_args
                  (index_element
                    (identifier)
                    (number))))
              (expression
                (binary_expr
                  (expression
                    (number))
                  (binary_operator_keyword)
                  (expression
                    (paren_expr
                      (expression
                        (binary_expr
                          (expression
                            (binary_expr
                              (expression
                                (indexed_reference
                                  (identifier)
                                  (indexed_reference_args
                                    (index_element
                                      (identifier)))))
                              (binary_operator_keyword)
                              (expression
                                (bare_identifier))))
                          (binary_operator_keyword)
                          (expression
                            (indexed_reference
                              (identifier)
                              (indexed_reference_args
                                (index_element
                                  (identifier))))))))))))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (indexed_reference
                  (identifier)
                  (indexed_reference_args
                    (index_element
                      (identifier))))))))
        (statement_without_semicolon
          (assignment_statement
            (identifier)
            (expression
              (binary_expr
                (expression
                  (unary_builtin_function_expr
                    (unary_builtin_function_keyword)
                    (expression
                      (binary_expr
                        (expression
                          (indexed_reference
                            (identifier)
                            (indexed_reference_args
                              (index_element
                                (identifier)))))
                        (binary_operator_keyword)
                        (expression
                          (indexed_reference
                            (identifier)
                            (indexed_reference_args
                              (index_element
                                (identifier)))))))))
                (binary_operator_keyword)
                (expression
                  (paren_expr
                    (expression
                      (binary_expr
                        (expression
                          (number))
                        (binary_operator_keyword)
                        (expression
                          (unary_builtin_function_expr
                            (unary_builtin_function_keyword)
                            (expression
                              (indexed_reference
                                (identifier)
                                (indexed_reference_args
                                  (index_element
                                    (identifier))))))))))))))))))
  (statement
    (statement_without_semicolon
      (loop_statement
        (loop_keyword)
        (index_list
          (index_element
            (identifier))
          (index_element
            (identifier)))
        (expression
          (paren_expr
            (expression
              (binary_expr
                (expression
                  (indexed_reference
                    (identifier)
                    (indexed_reference_args
                      (index_element
                        (identifier))
                      (index_element
                        (identifier)))))
                (binary_operator_keyword)
                (expression
                  (number))))))
        (statement_without_semicolon
          (assignment_statement
            (identifier)
            (expression
              (binary_expr
                (expression
                  (bare_identifier))
                (binary_operator_keyword)
                (expression
                  (indexed_reference
                    (identifier)
                    (indexed_reference_args
                      (index_element
                        (identifier))
                      (index_element
                        (identifier))))))))))))
  (statement
    (statement_without_semicolon
      (loop_statement
        (loop_keyword)
        (index_list
          (index_element
            (identifier)))
        (expression
          (paren_expr
            (expression
              (binary_expr
                (expression
                  (binary_expr
                    (expression
                      (indexed_reference
                        (identifier)
                        (indexed_reference_args
                          (index_element
                            (identifier)))))
                    (binary_operator_keyword)
                    (expression
                      (indexed_reference
                        (identifier)
                        (indexed_reference_args
                          (index_element
                            (identifier)))))))
                (binary_operator_keyword)
                (expression
                  (number))))))
        (statement_without_semicolon
          (assignment_statement
            (identifier)
            (expression
              (binary_expr
                (expression
                  (bare_identifier))
                (binary_operator_keyword)
                (expression
                  (number)))))))))
  (statement
    (statement_without_semicolon
      (loop_statement
        (loop_keyword)
        (index_list
          (index_element
            (identifier)))
        (expression
          (indexed_operation
            (indexed_operation_keyword)
            (index_list
              (index_element
                (identifier)))
            (expression
              (unary_builtin_function_expr
                (unary_builtin_function_keyword)
                (expression
                  (indexed_reference
                    (identifier)
                    (indexed_reference_args
                      (index_element
                        (identifier))
                      (index_element
                        (identifier)))))))))
        (statement_without_semicolon
          (assignment_statement
            (identifier)
            (expression
              (binary_expr
                (expression
                  (bare_identifier))
                (binary_operator_keyword)
                (expression
                  (number)))))))))
  (statement
    (statement_without_semicolon
      (loop_statement
        (loop_keyword)
        (index_list
          (index_element
            (identifier)))
        (expression
          (paren_expr
            (expression
              (binary_expr
                (expression
                  (binary_expr
                    (expression
                      (binary_expr
                        (expression
                          (unary_builtin_function_expr
                            (unary_builtin_function_keyword)
                            (expression
                              (bare_identifier))))
                        (binary_operator_keyword)
                        (expression
                          (number))))
                    (binary_operator_keyword)
                    (expression
                      (unary_builtin_function_expr
                        (unary_builtin_function_keyword)
                        (expression
                          (bare_identifier))))))
                (binary_operator_keyword)
                (expression
                  (unary_builtin_function_expr
                    (unary_builtin_function_keyword)
                    (expression
                      (bare_identifier))))))))
        (statement_without_semicolon
          (assignment_statement
            (identifier)
            (expression
              (binary_expr
                (expression
                  (bare_identifier))
                (binary_operator_keyword)
                (expression
                  (number)))))))))
  (statement
    (statement_without_semicolon
      (loop_statement
        (loop_keyword)
        (index_list
          (index_element
            (identifier))
          (index_element
            (identifier)))
        (expression
          (indexed_reference
            (identifier)
            (indexed_reference_args
              (index_element
                (identifier))
              (index_element
                (identifier)))))
        (statement_without_semicolon
          (assignment_statement
            (identifier)
            (expression
              (binary_expr
                (expression
                  (binary_expr
                    (expression
                      (binary_expr
                        (expression
                          (bare_identifier))
                        (binary_operator_keyword)
                        (expression
                          (unary_builtin_function_expr
                            (unary_builtin_function_keyword)
                            (expression
                              (bare_identifier))))))
                    (binary_operator_keyword)
                    (expression
                      (number))))
                (binary_operator_keyword)
                (expression
                  (unary_builtin_function_expr
                    (unary_builtin_function_keyword)
                    (expression
                      (bare_identifier)))))))))))
  (statement
    (statement_without_semicolon
      (loop_statement
        (loop_keyword)
        (index_list
          (index_element
            (identifier)))
        (expression
          (paren_expr
            (expression
              (binary_expr
                (expression
                  (bare_identifier))
                (binary_operator_keyword)
                (expression
                  (bare_identifier))))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (indexed_reference
                (identifier)
                (indexed_reference_args
                  (index_element
                    (identifier)
                    (number))))
              (expression
                (binary_expr
                  (expression
                    (number))
                  (binary_operator_keyword)
                  (expression
                    (paren_expr
                      (expression
                        (binary_expr
                          (expression
                            (binary_expr
                              (expression
                                (indexed_reference
                                  (identifier)
                                  (indexed_reference_args
                                    (index_element
                                      (identifier)))))
                              (binary_operator_keyword)
                              (expression
                                (bare_identifier))))
                          (binary_operator_keyword)
                          (expression
                            (indexed_reference
                              (identifier)
                              (indexed_reference_args
                                (index_element
                                  (identifier))))))))))))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (indexed_reference
                  (identifier)
                  (indexed_reference_args
                    (index_element
                      (identifier)
                      (number))))))))
        (statement_without_semicolon
          (assignment_statement
            (identifier)
            (expression
              (binary_expr
                (expression
                  (unary_builtin_function_expr
                    (unary_builtin_function_keyword)
                    (expression
                      (binary_expr
                        (expression
                          (indexed_reference
                            (identifier)
                            (indexed_reference_args
                              (index_element
                                (identifier)
                                (number)))))
                        (binary_operator_keyword)
                        (expression
                          (indexed_reference
                            (identifier)
                            (indexed_reference_args
                              (index_element
                                (identifier)))))))))
                (binary_operator_keyword)
                (expression
                  (paren_expr
                    (expression
                      (binary_expr
                        (expression
                          (number))
                        (binary_operator_keyword)
                        (expression
                          (unary_builtin_function_expr
                            (unary_builtin_function_keyword)
                            (expression
                              (indexed_reference
                                (identifier)
                                (indexed_reference_args
                                  (index_element
                                    (identifier)
                                    (number)))))))))))))))))))

================================================================================
Simple if
================================================================================

if (x > 0,
    y = 1;
);

--------------------------------------------------------------------------------

(source_file
  (statement
    (statement_without_semicolon
      (if_statement
        (condition
          (binary_expr
            (expression
              (bare_identifier))
            (binary_operator_keyword)
            (expression
              (number))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (number)))))))))

================================================================================
If with else
================================================================================

if (demand(i) > supply(i),
    shortage(i) = demand(i) - supply(i);
else
    shortage(i) = 0;
);

--------------------------------------------------------------------------------

(source_file
  (statement
    (statement_without_semicolon
      (if_statement
        (condition
          (binary_expr
            (expression
              (indexed_reference
                (identifier)
                (indexed_reference_args
                  (index_element
                    (identifier)))))
            (binary_operator_keyword)
            (expression
              (indexed_reference
                (identifier)
                (indexed_reference_args
                  (index_element
                    (identifier)))))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (indexed_reference
                (identifier)
                (indexed_reference_args
                  (index_element
                    (identifier))))
              (expression
                (binary_expr
                  (expression
                    (indexed_reference
                      (identifier)
                      (indexed_reference_args
                        (index_element
                          (identifier)))))
                  (binary_operator_keyword)
                  (expression
                    (indexed_reference
                      (identifier)
                      (indexed_reference_args
                        (index_element
                          (identifier))))))))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (indexed_reference
                (identifier)
                (indexed_reference_args
                  (index_element
                    (identifier))))
              (expression
                (number)))))))))

================================================================================
If with elseif
================================================================================

if (round(price,2) > 100,
    category = 'expensive';
elseif round(price,2) > 50,
    category = 'moderate';
else
    category = 'cheap';
);

--------------------------------------------------------------------------------

(source_file
  (statement
    (statement_without_semicolon
      (if_statement
        (condition
          (binary_expr
            (expression
              (multi_args_builtin_function_expr
                (multi_args_builtin_function_keyword)
                (expression
                  (bare_identifier))
                (expression
                  (number))))
            (binary_operator_keyword)
            (expression
              (number))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (string)))))
        (condition
          (binary_expr
            (expression
              (multi_args_builtin_function_expr
                (multi_args_builtin_function_keyword)
                (expression
                  (bare_identifier))
                (expression
                  (number))))
            (binary_operator_keyword)
            (expression
              (number))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (string)))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (string)))))))))

================================================================================
Nested statements inside if
================================================================================

if (abs(x) > 10,
    y = sqrt(x);
    z = log(x);
elseif x = 0,
    y = 0;
else
    y = -x;
);

--------------------------------------------------------------------------------

(source_file
  (statement
    (statement_without_semicolon
      (if_statement
        (condition
          (binary_expr
            (expression
              (unary_builtin_function_expr
                (unary_builtin_function_keyword)
                (expression
                  (bare_identifier))))
            (binary_operator_keyword)
            (expression
              (number))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (unary_builtin_function_expr
                  (unary_builtin_function_keyword)
                  (expression
                    (bare_identifier)))))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (unary_builtin_function_expr
                  (unary_builtin_function_keyword)
                  (expression
                    (bare_identifier)))))))
        (condition
          (binary_expr
            (expression
              (bare_identifier))
            (binary_operator_keyword)
            (expression
              (number))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (number)))))
        (statement
          (statement_without_semicolon
            (assignment_statement
              (identifier)
              (expression
                (unary_expr
                  (expression
                    (bare_identifier)))))))))))
